--- a/inbex.css
+++ b/inbex.css
@@ -1,5 +1,3 @@
-/* .row{
-    background-color: #feeae9;
-    border-radius: 10px;
-    
-} */
+.background-slid{
+    background-color: antiquewhite;
+}
